--- a/b02-lwe.tex
+++ b/b02-lwe.tex
@@ -45,7 +45,7 @@ $ $
 \item Scale up $m \longrightarrow \Delta \cdot m \text{ } \in \mathbb{Z}_q$
 
 \item Compute $b = \vec{a} \cdot \vec{s} + \Delta  m + e \pmod q$
-\item $\textsf{LWE}_{\vec{s},\sigma}(\Delta  m) = (\vec{a}, b) \text{ } \in \mathbb{Z}_q^{k + 1}$ 
+\item $\textsf{LWE}_{\vec{s},\sigma}(\Delta  m + e) = (\vec{a}, b) \text{ } \in \mathbb{Z}_q^{k + 1}$ 
 \end{enumerate}
 
 \end{tcolorbox}
