--- a/b05-glev.tex
+++ b/b05-glev.tex
@@ -10,7 +10,7 @@ Note that $\beta$ should be some value between $t$ and $q$. Specifically, $t$ sh
 \begin{tcolorbox}[title={\textbf{\tboxlabel{\ref*{subsec:glev-enc}} GLev Encryption}}]
 
 
-$\textsf{GLev}_{S, \sigma}^{\beta, l}(M) = \Bigl \{\textsf{GLWE}_{S, \sigma}\left(\dfrac{q}{\beta^i} M\right)  \Bigr \}_{i=1}^{l} \in \mathcal{R}_{\langle n, q \rangle }^{(k+1) \cdot l}$
+$\textsf{GLev}_{S, \sigma}^{\beta, l}(M) = \Bigl \{\textsf{GLWE}_{S, \sigma}\left(\dfrac{q}{\beta^i} M + E_i\right)  \Bigr \}_{i=1}^{l} \in \mathcal{R}_{\langle n, q \rangle }^{(k+1) \cdot l}$
 \end{tcolorbox}
 
 \begin{figure}[h!]
