--- a/c02-glwe-add-plain.tex
+++ b/c02-glwe-add-plain.tex
@@ -1,7 +1,7 @@
 Suppose we have a GLWE ciphertext \textsf{ct} and a new plaintext polynomial $\Lambda$ as follows: 
 
 
-$\textsf{ct} = \textsf{GLWE}_{S, \sigma}(\Delta M) = ( A_0, A_1, \gap{$\cdots$}, A_{k-1}, B) \in \mathcal{R}_{\langle n,q \rangle}^{k + 1}$
+$\textsf{ct} = \textsf{GLWE}_{S, \sigma}(\Delta M + E) = ( A_0, A_1, \gap{$\cdots$}, A_{k-1}, B) \in \mathcal{R}_{\langle n,q \rangle}^{k + 1}$
 
 $\Lambda$: a new plaintext polynomial
 
@@ -18,13 +18,13 @@ $ $
 \noindent Then, the following is true:
 
 \begin{tcolorbox}[title={\textbf{\tboxlabel{\ref*{sec:glwe-add-plain}} GLWE Homomorphic Addition with a Plaintext}}]
-$\textsf{GLWE}_{S, \sigma}(\Delta M) + \Delta\Lambda $
+$\textsf{GLWE}_{S, \sigma}(\Delta M + E) + \Delta\Lambda $
 
 $=  (\{A_i\}_{i=0}^{k-1}, \text{ } B) + \Delta\Lambda$
 
 $=  (\{A_i\}_{i=0}^{k-1}, \text{ } B + \Delta\Lambda)$
 
-$= \textsf{GLWE}_{S, \sigma}(\Delta (M + \Lambda) )$
+$= \textsf{GLWE}_{S, \sigma}(\Delta (M + \Lambda) + E)$
 \end{tcolorbox}
 
 
@@ -41,12 +41,12 @@ This means that adding a ($\Delta$-scaled) plaintext polynomial $\Lambda$ to a G
 $B + \Delta \cdot \Lambda = \sum\limits_{i=0}^{k-1}{(A_i \cdot S_i)} + \Delta \cdot M + E + \Delta \cdot \Lambda = \sum\limits_{i=0}^{k-1}{(A_i \cdot S_i)} + \Delta \cdot (M + \Lambda) + E$  \\
 
 This means that $(A_0, A_1, ... \text{ } A_{k-1}
-, B + \Delta \Lambda)$ form the ciphertext $\textsf{GLWE}_{S, \sigma}(\Delta (\Lambda + M))$
+, B + \Delta \Lambda)$ form the ciphertext $\textsf{GLWE}_{S, \sigma}(\Delta (\Lambda + M) + E)$
 \item Thus, \\
-$\textsf{GLWE}_{S, \sigma}(\Delta M) + \Delta\Lambda$ \\
+$\textsf{GLWE}_{S, \sigma}(\Delta M + E) + \Delta\Lambda$ \\
 $ = (A_0, \text { } A_1, ... \text{ } A_{k-1}, \text { } B + \Delta \Lambda)$ \\
 $ = (\{A_i^{\langle 1 \rangle}\}_{i=0}^{k-1}, \text { } B + \Delta \Lambda)$ \\
-$= \textsf{GLWE}_{S, \sigma}(\Delta (M + \Lambda))$
+$= \textsf{GLWE}_{S, \sigma}(\Delta (M + \Lambda) + E)$
 
 %\begin{flushright}
 %\qedsymbol{} 
