--- a/c04-glwe-modulus-switch.tex
+++ b/c04-glwe-modulus-switch.tex
@@ -1,4 +1,4 @@
-In the GLWE cryptosystem, modulus switching is a process of changing a ciphertext's modulo domain to a smaller (or larger) one, while ensuring that the ciphertext still decrypts to the same plaintext. For example, suppose we have the ciphertext $\textsf{LWE}_{S, \sigma}(\Delta m) \in \mathbb{Z}_q^{k+1}$. If we switch the ciphertext's modulo from $q \rightarrow q'$, then the ciphertext is converted into $\textsf{LWE}_{S, \sigma}\left(\Delta\dfrac{q'}{q} m\right) \in \mathbb{Z}_{q'}^{k+1}$. The ciphertext's all other components such as the noise ($e$) and public keys ($a_0, a_1, \cdots, a_{k-1}$, $b$) are scaled by $\dfrac{q'}{q}$, becoming $\left\lceil e\dfrac{q'}{q} \right\rfloor$, $\left(\left\lceil a_0\dfrac{q'}{q}\right\rfloor, \left\lceil a_1\dfrac{q'}{q}\right\rfloor, \cdots, \left\lceil a_{k-1}\dfrac{q'}{q}\right\rfloor, \left\lceil b\dfrac{q'}{q}\right\rfloor\right)$. To switch the modulo of an LWE ciphertext, we use the modulo rescaling technique learned from \autoref{sec:modulus-rescaling}. 
+In the GLWE cryptosystem, modulus switching is a process of changing a ciphertext's modulo domain to a smaller (or larger) one, while ensuring that the ciphertext still decrypts to the same plaintext. For example, suppose we have the ciphertext $\textsf{LWE}_{S, \sigma}(\Delta m) \in \mathbb{Z}_q^{k+1}$. If we switch the ciphertext's modulo from $q \rightarrow q'$, then the ciphertext is converted into $\textsf{LWE}_{S, \sigma}\left(\Delta\dfrac{q'}{q} m + e'\right) \in \mathbb{Z}_{q'}^{k+1}$. The ciphertext's all other components such as the noise ($e$) and public keys ($a_0, a_1, \cdots, a_{k-1}$, $b$) are scaled by $\dfrac{q'}{q}$, becoming $\left\lceil e\dfrac{q'}{q} \right\rfloor$, $\left(\left\lceil a_0\dfrac{q'}{q}\right\rfloor, \left\lceil a_1\dfrac{q'}{q}\right\rfloor, \cdots, \left\lceil a_{k-1}\dfrac{q'}{q}\right\rfloor, \left\lceil b\dfrac{q'}{q}\right\rfloor\right)$. To switch the modulo of an LWE ciphertext, we use the modulo rescaling technique learned from \autoref{sec:modulus-rescaling}. 
 The same modulus switching technique can also be applied to RLWE ciphertexts. In this section, we will show how to switch (i.e., rescale) the modulo of LWE and RLWE ciphertexts and prove its correctness.  
 %That is, after  LWE/RLWE ciphertexts, we will prove why they are still valid LWE/RLWE ciphertexts.
 
@@ -16,37 +16,37 @@ Recall that the LWE cryptosystem (\autoref{subsec:lwe-enc}) comprises the follow
 \begin{itemize}
 \item \textbf{\underline{Setup}:} $\Delta = \dfrac{q}{t}$, \text{ } $S = (s_0, s_1, \ldots, s_{k-1}) \xleftarrow{\$} \mathbb{Z}_2^{k}$
 
-\item \textbf{\underline{Encryption Input}:} $m \in \mathbb{Z}_t$, \text{ } $A = (a_0, a_1, \ldots, a_{k-1}) \xleftarrow{\$} \mathbb{Z}_q^{k}$, \text{ } $e \xleftarrow{\chi_\sigma} \mathbb{Z}_q$
+\item \textbf{\underline{Encryption Input}:} $m \in \mathbb{Z}_t$, \text{ } $\vec{a} = (a_0, a_1, \ldots, a_{k-1}) \xleftarrow{\$} \mathbb{Z}_q^{k}$, \text{ } $e \xleftarrow{\chi_\sigma} \mathbb{Z}_q$
 
 $ $
 
-\item \textbf{\underline{Encryption}:} $\textsf{LWE}_{S,\sigma}(\Delta  m) = (A, b) \in \mathbb{Z}_q^{k + 1}$ \text{ } (where $b = A \cdot S + \Delta  m + e \in \mathbb{Z}_q$)
+\item \textbf{\underline{Encryption}:} $\textsf{LWE}_{\vec{s},\sigma}(\Delta  m + e) = (\vec{a}, b) \in \mathbb{Z}_q^{k + 1}$ \text{ } (where $b = \vec{a} \cdot \vec{s} + \Delta  m + e \in \mathbb{Z}_q$)
 
 $ $
 
-\item \textbf{\underline{Decryption}:} $\textsf{LWE}^{-1}_{S,\sigma}(\textsf{ct}) = b - A\cdot S = \Delta  m + e \text{ } \text{ } \in \mathbb{Z}_q$
+\item \textbf{\underline{Decryption}:} $\textsf{LWE}^{-1}_{S,\sigma}(\textsf{ct}) = b - \vec{a}\cdot \vec{s} = \Delta  m + e \text{ } \text{ } \in \mathbb{Z}_q$
 
 \end{itemize}
 
 $ $
 
 
-In the LWE cryptosystem, modulus switching is a process of converting an original LWE ciphertext's modulo domain to a smaller modulo domain. This can be seen as scaling down all components, except for the plaintext $m$ and the secret key $S$, in the original LWE ciphertext to a smaller domain. This operation preserves the size and integrity of the original plaintext $m$, while the scaling factor $\Delta$ gets reduced to a smaller value $\hat{\Delta}$ and the noise $e$ to a smaller (reduced) noise $\hat{e}$ (note that noise alteration does not affect the original plaintext $m$, because the noise gets rounded away after decryption, anyway), and $A$ also gets scaled down to a smaller $\hat A$. Modulus switching is used for computational efficiency during TFHE's bootstrapping (which will be discussed in \autoref{subsec:tfhe-noise-bootstrapping}). Modulus switching is also used for implementing the ciphertext-to-ciphertext multiplication algorithm in BGV (\autoref{subsec:bfv-mult-cipher}) and CKKS (\autoref{subsec:ckks-mult-cipher}). 
+In the LWE cryptosystem, modulus switching is a process of converting an original LWE ciphertext's modulo domain to a smaller modulo domain. This can be seen as scaling down all components, except for the plaintext $m$ and the secret key $S$, in the original LWE ciphertext to a smaller domain. This operation preserves the size and integrity of the original plaintext $m$, while the scaling factor $\Delta$ gets reduced to a smaller value $\hat{\Delta}$ and the noise $e$ to a smaller (reduced) noise $\hat{e}$ (note that noise alteration does not affect the original plaintext $m$, because the noise gets rounded away after decryption, anyway), and $\vec{a}$ also gets scaled down to a smaller $\vec{\hat{a}}$. Modulus switching is used for computational efficiency during TFHE's bootstrapping (which will be discussed in \autoref{subsec:tfhe-noise-bootstrapping}). Modulus switching is also used for implementing the ciphertext-to-ciphertext multiplication algorithm in BGV (\autoref{subsec:bfv-mult-cipher}) and CKKS (\autoref{subsec:ckks-mult-cipher}). 
 
-The high-level idea of LWE modulus switch is to rescale the congruence relationship of the LWE scheme. LWE's homomorphic computation algorithms include the following: ciphertext-to-ciphertext addition, ciphertext-to-plaintext addition, ciphertext-to-plaintext multiplication, ciphertext-to-ciphertext multiplication. However, all congruence relationships used in these algorithms are essentially rewritten versions of the following single fundamental congruence relationship: $b = A\cdot S + \Delta m + e \bmod q$. Thus, modulus switch of an LWE ciphertext from $q \rightarrow q'$ is equivalent to rescaling the modulo of the above congruence relationship from $q \rightarrow q'$.
+The high-level idea of LWE modulus switch is to rescale the congruence relationship of the LWE scheme. LWE's homomorphic computation algorithms include the following: ciphertext-to-ciphertext addition, ciphertext-to-plaintext addition, ciphertext-to-plaintext multiplication, ciphertext-to-ciphertext multiplication. However, all congruence relationships used in these algorithms are essentially rewritten versions of the following single fundamental congruence relationship: $b = \vec{a}\cdot \vec{s} + \Delta m + e \bmod q$. Thus, modulus switch of an LWE ciphertext from $q \rightarrow q'$ is equivalent to rescaling the modulo of the above congruence relationship from $q \rightarrow q'$.
 
-Based on this insight, the LWE cryptosystem's modulus switching from $q \rightarrow \hat{q}$ (where $q > \hat{q}$) is a process of converting the original LWE ciphertext $\textsf{LWE}_{S, \sigma}(\Delta m)$ as follows:
+Based on this insight, the LWE cryptosystem's modulus switching from $q \rightarrow \hat{q}$ (where $q > \hat{q}$) is a process of converting the original LWE ciphertext $\textsf{LWE}_{S, \sigma}(\Delta m + e)$ as follows:
 
 \begin{tcolorbox}[title={\textbf{\tboxlabel{\ref*{subsec:modulus-switch-lwe}} LWE Modulus Switching}}]
 
-Given an LWE ciphertext $(A, b)$ where $b = A\cdot S + \Delta m + e \bmod q$ and $m \in \mathbb{Z}_t$, modulus switch of the ciphertext from $q$ to $\hat q$ is equivalent to updating $(A, b)$ to $(\hat A, \hat b)$ as follows:
+Given an LWE ciphertext $(\vec{a}, b)$ where $b = \vec{a}\cdot \vec{s} + \Delta m + e \bmod q$ and $m \in \mathbb{Z}_t$, modulus switch of the ciphertext from $q$ to $\hat q$ is equivalent to updating $(A, b)$ to $(\vec{\hat{a}}, \hat b)$ as follows:
 
 
-$\hat{A} = (\hat{a}_0, \hat{a}_1, \ldots, \hat{a}_{k-1})$, where each $\hat{a}_i = \Big\lceil a\dfrac{\hat{q}}{q} \Big\rfloor \in \mathbb{Z}_{\hat{q}}$ \textcolor{red}{ $\rhd$ $\lceil \rfloor$ means rounding to the nearest integer}
+$\vec{\hat{a}} = (\hat{a}_0, \hat{a}_1, \ldots, \hat{a}_{k-1})$, where each $\hat{a}_i = \Big\lceil a\dfrac{\hat{q}}{q} \Big\rfloor \in \mathbb{Z}_{\hat{q}}$ \textcolor{red}{ $\rhd$ $\lceil \rfloor$ means rounding to the nearest integer}
 
  $\hat{b} = \Big\lceil b \dfrac{\hat{q}}{q} \Big\rfloor \in \mathbb{Z}_{\hat{q}}$
 
-$\textsf{LWE}_{{S},\sigma}(\hat{\Delta}  m) = (\hat{a}_0, \hat{a}_1, \ldots, \hat{b}) \in \mathbb{Z}_{\hat{q}}^{k + 1}$ 
+$\textsf{LWE}_{{S},\sigma}(\hat{\Delta}  m + \hat{e} + \epsilon_{\textit{all}}) = (\hat{a}_0, \hat{a}_1, \ldots, \hat{b}) \in \mathbb{Z}_{\hat{q}}^{k + 1}$  \textcolor{red}{ $\rhd$  where $\epsilon_{\textit{all}}$ is a small rounding error}
 
 $ $
 
@@ -123,7 +123,7 @@ $ $
 
 $\hat{b} = \sum\limits_{i=0}^{k-1}\hat{a}_is_i + \hat{\Delta} m + \hat{e} + \epsilon_{\textit{all}}  \approx \sum\limits_{i=0}^{k-1}\hat{a}_i  s_i + \hat{\Delta} m + \hat{e} \in \mathbb{Z}_{\hat{q}}$
 
-Thus, $(\hat{a}_0, \hat{a}_1, \ldots, \hat{b}) = \textsf{LWE}_{{S},\sigma}(\hat{\Delta}  m)$, decrypting which will give us $m$.
+Thus, $(\hat{a}_0, \hat{a}_1, \ldots, \hat{b}) = \textsf{LWE}_{{S},\sigma}(\hat{\Delta} m + \hat{e} + \epsilon_{\textit{all}})$, decrypting which will give us $m$.
 
 %\begin{flushright}
 %\qedsymbol{} 
@@ -156,7 +156,7 @@ $e = 1 \in \mathbb{Z}_q$
 
 $b = a_0s_0 + a_1s_1 + a_2s_2 + a_3s_3 + \Delta m + e = 26 \in \mathbb{Z}_q$
 
-$\textsf{LWE}_{S, \sigma}(\Delta m) = \textsf{ct} = (a_0, a_1, a_2, a_3, b) = (-25, 12, -3, 7, 26) \in \mathbb{Z}_q^{n+1}$
+$\textsf{LWE}_{S, \sigma}(\Delta m + e) = \textsf{ct} = (a_0, a_1, a_2, a_3, b) = (-25, 12, -3, 7, 26) \in \mathbb{Z}_q^{n+1}$
 
 $ $
 
@@ -166,7 +166,7 @@ $\hat{\Delta} = \Delta\cdot\dfrac{32}{64} = 8$
 
 $\hat{e} = \Big\lceil 1 \cdot \dfrac{32}{64} \Big\rfloor = 1$
 
-$\textsf{LWE}_{S, \sigma}(\hat{\Delta} m) = \hat{\textsf{ct}} = (\hat{a_0}, \hat{a_1}, \hat{a_2}, \hat{a_3}, \hat{b})$
+$\textsf{LWE}_{S, \sigma}(\hat{\Delta} m + \hat{e} + \epsilon_{\textit{all}}) = \hat{\textsf{ct}} = (\hat{a_0}, \hat{a_1}, \hat{a_2}, \hat{a_3}, \hat{b})$
 
 $ = \left(\Big\lceil -25\cdot\dfrac{32}{64}\Big\rfloor, \Big\lceil12\cdot\dfrac{32}{64}\Big\rfloor, \Big\lceil-3\cdot\dfrac{32}{64}\Big\rfloor, \Big\lceil7\cdot\dfrac{32}{64}\Big\rfloor, \Big\lceil26\cdot\dfrac{32}{64}\Big\rfloor\right)$
 
@@ -240,7 +240,7 @@ $E = e_0 + e_1X + e_2X^2 + \cdots + e_{n-1}X^{n-1} \xleftarrow{\chi_\sigma} \mat
 $ $
 
 \item \textbf{\underline{Encryption}: } 
-$\textsf{RLWE}_{S,\sigma}(\Delta \cdot M) = (A, B) \in \mathcal{R}_{\langle n,q \rangle}^2$ 
+$\textsf{RLWE}_{S,\sigma}(\Delta \cdot M + E) = (A, B) \in \mathcal{R}_{\langle n,q \rangle}^2$ 
 
 , where $B = A \cdot S + \Delta \cdot M + E = b_0 + b_1X + b_2X^2 + \cdots + b_{n-1}X^{n-1}$
 
@@ -262,7 +262,7 @@ $\hat{A} = \hat{a}_0 + \hat{a}_1X + \hat{a}_2X^2 + \cdots + \hat{a}_{n-1}X^{n-1}
 
 $\hat{B} = \hat{b}_0 + \hat{b}_1X + \hat{b}_2X^2 + \cdots + \hat{b}_{n-1}X^{n-1}$, where each $\hat{b}_i = \Big\lceil b_i\dfrac{\hat{q}}{q} \Big\rfloor \in \mathbb{Z}_{\hat{q}}$
 
-$\textsf{RLWE}_{{S},\sigma}(\hat{\Delta}  M) = (\hat{A}, \hat{B}) \in \mathcal{R}_{\langle n, \hat{q} \rangle}^{2}$ 
+$\textsf{RLWE}_{{S},\sigma}(\hat{\Delta}  M + \hat{E} + E^{\langle \epsilon_{\textit{all}} \rangle}) = (\hat{A}, \hat{B}) \in \mathcal{R}_{\langle n, \hat{q} \rangle}^{2}$ 
 
 $ $
 
@@ -401,7 +401,7 @@ $ \approx \left(\sum\limits_{i=0}^{j}(\hat{a}_{j-i}s_i)
 - \sum\limits_{i=j+1}^{n-1}(\hat{a}_{n+j-i}s_i)\right)
 + \hat{\Delta} m_j + \hat{e}_j$
 
-Thus, $(\hat{A}, \hat{B}) = \textsf{RLWE}_{{S},\sigma}(\hat{\Delta} M)$, decrypting which will give us $M$.
+Thus, $(\hat{A}, \hat{B}) = \textsf{RLWE}_{{S},\sigma}(\hat{\Delta} M + \hat{E} + E^{\langle \epsilon_{\textit{all}} \rangle})$, decrypting which will give us $M$.
 
 \begin{flushright}
 \qedsymbol{} 
@@ -428,7 +428,7 @@ $ $
 
 $ $
 
-\item \textbf{\underline{Encryption}: } $\textsf{GLWE}_{S,\sigma}(\Delta M) = (\{A_i\}_{i=0}^{k-1}, B) \text{ } \in \mathcal{R}_{\langle n,q \rangle}^{k + 1}$ 
+\item \textbf{\underline{Encryption}: } $\textsf{GLWE}_{S,\sigma}(\Delta M + E) = (\{A_i\}_{i=0}^{k-1}, B) \text{ } \in \mathcal{R}_{\langle n,q \rangle}^{k + 1}$ 
 
 , where $B = \sum\limits_{i=0}^{k-1}{(A_i \cdot S_i)} + \Delta  M + E \text{ } \in \mathcal{R}_{\langle n,q \rangle}$
 
@@ -452,7 +452,7 @@ $\hat{A_i} = \hat{a}_{i,0} + \hat{a}_{i,1}X + \hat{a}_{i,2}X^2 + \cdots + \hat{a
 
 $\hat{B} = \hat{b}_0 + \hat{b}_1X + \hat{b}_2X^2 + \cdots + \hat{b}_{n-1}X^{n-1}$, where each $\hat{b}_j = \Big\lceil b_j\dfrac{\hat{q}}{q} \Big\rfloor \in \mathbb{Z}_{\hat{q}}$
 
-$\textsf{GLWE}_{{S},\sigma}(\hat{\Delta}  M) = (\{\hat{A}\}_{i=0}^{k-1}, \hat{B}) \in \mathcal{R}_{\langle n, \hat{q} \rangle}^{k+1}$ 
+$\textsf{GLWE}_{{S},\sigma}(\hat{\Delta}  M + \hat{E} + E^{\langle \epsilon_{\textit{all}} \rangle}) = (\{\hat{A}\}_{i=0}^{k-1}, \hat{B}) \in \mathcal{R}_{\langle n, \hat{q} \rangle}^{k+1}$ 
 
 $ $
 
