--- a/c05-glwe-key-switching.tex
+++ b/c05-glwe-key-switching.tex
@@ -3,11 +3,11 @@
 
 $ $
 
-Key switching is a process to change a GLWE ciphertext's secret key from $S$ to a new key $S'$ without decrypting the ciphertext. This is equivalent to converting a ciphertext $\textsf{GLWE}_{S,\sigma}(\Delta M)$ into a new ciphertext $\textsf{GLWE}_{S',\sigma}(\Delta M)$. 
+Key switching is a process to change a GLWE ciphertext's secret key from $S$ to a new key $S'$ without decrypting the ciphertext. This is equivalent to converting a ciphertext $\textsf{GLWE}_{S,\sigma}(\Delta M + E)$ into a new ciphertext $\textsf{GLWE}_{S',\sigma}(\Delta M + E - E')$. 
 
 $ $
 
-\noindent Remember that $\textsf{GLWE}_{S,\sigma}(\Delta M) = (A_0, A_1, \ldots , A_{k-1}, B) \in \mathcal{R}_{\langle n, q \rangle }^{k + 1}$
+\noindent Remember that $\textsf{GLWE}_{S,\sigma}(\Delta M + E) = (A_0, A_1, \ldots , A_{k-1}, B) \in \mathcal{R}_{\langle n, q \rangle }^{k + 1}$
 
 , where $B = \sum\limits_{i=0}^{k-1}{(A_i \cdot S_i)} + \Delta \cdot M + E$
 
@@ -17,7 +17,7 @@ $ $
 
 \noindent Also, remember that GLev (\autoref{sec:glev}) is defined as follows: 
 
-$\textsf{GLev}_{S, \sigma}^{\beta, l}(M) = \Bigl \{\text{GLWE}_{S, \sigma}\Bigl (\dfrac{q}{\beta^i} \cdot M \Bigr ) \Bigr \}_{i=1}^{l} \in \mathcal{R}_{\langle n, q \rangle }^{(k+1) \cdot l}$
+$\textsf{GLev}_{S, \sigma}^{\beta, l}(M) = \Bigl \{\text{GLWE}_{S, \sigma}\Bigl (\dfrac{q}{\beta^i} \cdot M + E_i \Bigr ) \Bigr \}_{i=1}^{l} \in \mathcal{R}_{\langle n, q \rangle }^{(k+1) \cdot l}$
 
 $ $
 
@@ -25,9 +25,9 @@ $ $
 
 $\mathit{KSK}_i = \textsf{GLev}_{S', \sigma}^{\beta, l}(S_i)$ \\
 $ = \left ( \textsf{GLWE}_{S', \sigma} \left ( 
- \dfrac{q}{\beta^1}S_i \right ), \textsf{GLWE}_{S', \sigma} \left ( 
- \dfrac{q}{\beta^2}S_i \right ), \ldots, \textsf{GLWE}_{S', \sigma} \left ( 
- \dfrac{q}{\beta^l}S_i \right ) \right ) \in \mathcal{R}_{\langle n, q \rangle }^{(k' + 1) \cdot l}$
+ \dfrac{q}{\beta^1}S_i + E_{i, 1}\right ), \textsf{GLWE}_{S', \sigma} \left ( 
+ \dfrac{q}{\beta^2}S_i + E_{i, 2}\right ), \ldots, \textsf{GLWE}_{S', \sigma} \left ( 
+ \dfrac{q}{\beta^l}S_i  + E_{i, l} \right) \right ) \in \mathcal{R}_{\langle n, q \rangle }^{(k' + 1) \cdot l}$
 
 $ $
 
@@ -35,7 +35,10 @@ $ $
 
 
 \begin{tcolorbox}[title={\textbf{\tboxlabel{\ref*{sec:glwe-key-switching}} GLWE Key Switching}}]
-$\textsf{GLWE}_{S',\sigma}(\Delta M) = (\overbrace{0, 0, \ldots, 0}^{k'}, B) - \sum \limits_{i=0}^{k-1} A_i \cdot S_i$
+
+Given $\textsf{GLWE}_{S,\sigma}(\Delta M + E) = (A, B)$,
+
+$\textsf{GLWE}_{S',\sigma}(\Delta M + E') = (\overbrace{0, 0, \ldots, 0}^{k'}, B) - \sum \limits_{i=0}^{k-1} A_i \cdot S_i$
 
 \text{ } \text{ } $ = (0, 0, \ldots, 0, B) - \sum \limits_{i=0}^{k-1} \langle \textsf{Decomp}^{\beta, l}(A_i), \mathit{KSK}_i \rangle$
 \end{tcolorbox}
@@ -49,54 +52,59 @@ $\textsf{GLWE}_{S',\sigma}(\Delta M) = (\overbrace{0, 0, \ldots, 0}^{k'}, B) - \
 
 $ $
 
-$\textsf{Decomp}^{\beta, l}(A_i) = (A_{\langle i,1 \rangle}, A_{\langle i,2 \rangle}, \ldots, A_{\langle i,l \rangle})$, where
+$\textsf{Decomp}^{\beta, l}(A_i) = (A_{ i,1 }, A_{ i,2 }, \ldots, A_{ i,l })$, where
 
 $ $
 
-$A_i = A_{\langle i, 1 \rangle} \dfrac{q}{\beta^1} + A _{\langle i, 2 \rangle}\dfrac{q}{\beta^2} + \cdots + A_{\langle i, l \rangle} \dfrac{q}{\beta^l}  $
+$A_i = A_{ i, 1 } \dfrac{q}{\beta^1} + A _{ i, 2 }\dfrac{q}{\beta^2} + \cdots + A_{ i, l } \dfrac{q}{\beta^l}  $
 
 $ $
 
 \item $\langle \textsf{Decomp}^{\beta, l}(A_i), \mathit{KSK}_i \rangle $ \\
-$ =  A_{\langle i,1 \rangle} \cdot \textsf{GLWE}_{S', \sigma} \left ( 
- \dfrac{q}{\beta^1}S_i \right ) + A_{\langle i,2 \rangle} \cdot \textsf{GLWE}_{S', \sigma} \left ( 
- \dfrac{q}{\beta^2}S_i \right ) + \cdots + A_{\langle i,l \rangle} \cdot \textsf{GLWE}_{S', \sigma} \left ( 
- \dfrac{q}{\beta^l}S_i \right ) $ 
+$ =  A_{ i,1 } \cdot \textsf{GLWE}_{S', \sigma} \left ( 
+ \dfrac{q}{\beta^1}S_i + E_{i, 1} \right ) + A_{ i,2 } \cdot \textsf{GLWE}_{S', \sigma} \left ( 
+ \dfrac{q}{\beta^2}S_i  + E_{i, 2} \right ) + \cdots + A_{ i,l } \cdot \textsf{GLWE}_{S', \sigma} \left ( 
+ \dfrac{q}{\beta^l}S_i  + E_{i, l} \right ) $ 
+
 \textcolor{red}{ $\rhd$ where each \textsf{GLWE} ciphertext is an encryption of $S_i\dfrac{q}{\beta}, S_i\dfrac{q}{\beta^2}, \cdots, S_i\dfrac{q}{\beta^l}$ as plaintext with the plaintext scaling factor 1}
 
 $ $
  
 $= \textsf{GLWE}_{S', \sigma} \left ( 
- \left ( A_{\langle i,1 \rangle} \dfrac{q}{\beta^1} + A_{\langle i,2 \rangle} \dfrac{q}{\beta^2} + \cdots + A_{\langle i,l \rangle} \dfrac{q}{\beta^l} \right ) \cdot S_i \right )$ 
+ \left ( A_{ i,1 } \dfrac{q}{\beta^1} + A_{ i,2 } \dfrac{q}{\beta^2} + \cdots + A_{ i,l } \dfrac{q}{\beta^l} \right ) \cdot S_i + E_i \right )$ \textcolor{red}{ $\rhd$ where $E_i = \sum\limits_{j=1}^{l} A_{ i, 1 } E_{i, j}$}
 
  
 $= \textsf{GLWE}_{S', \sigma} \left ( 
- \left ( A_i \right ) \cdot S_i \right ) = \textsf{GLWE}_{S', \sigma} ( 
- A_i  S_i ) $ 
+ \left ( A_i \right ) \cdot S_i + E_i \right ) = \textsf{GLWE}_{S', \sigma} ( 
+ A_i  S_i  + E_i) $ 
 
 $ $
  
  \item $\sum \limits_{i=0}^{k-1} \langle \textsf{Decomp}^{\beta, l}(A_i), \mathit{KSK}_i \rangle = \sum \limits_{i=0}^{k-1} (\textsf{GLWE}_{S', \sigma} ( 
- A_i  S_i )) $ 
+ A_i  S_i  + E_i)) $ 
  
  $= \textsf{GLWE}_{S', \sigma} \left ( \sum \limits_{i=0}^{k-1}  
- A_i  S_i  \right ) $
+ A_i  S_i   + E_i \right ) $
 
 $ $
  
- \item $B$ is equivalent to a trivial GLWE encryption with $S'$, where its every $A_0, A_1, \ldots, A_{k'-1}$ is 0. That is, $\textsf{GLWE}_{S', \sigma}(B) = (\overbrace{0, 0, \ldots}^{k'}, B)$. Note that $\textsf{GLWE}_{S', \sigma}(B)$ can be created without the knowledge of $S'$, because its all $A_iS_i$ terms are $0$. 
+ \item $B$ is equivalent to a trivial GLWE encryption with $S'$, where its every $A_0, A_1, \ldots, A_{k'-1}$ is 0. That is, $\textsf{GLWE}_{S', \sigma}(B) = (\overbrace{0, 0, \ldots}^{k'}, B)$. Note that $\textsf{GLWE}_{S', \sigma}(B)$ can be created without the knowledge of $S'$, because its all $A_iS_i$ terms are 0. 
 
 $ $
  
- \item $\textsf{GLWE}_{S', \sigma}(B) - \textsf{GLWE}_{S', \sigma} \left( \sum \limits_{i=0}^{k-1} (A_i  S_i )\right) = \textsf{GLWE}_{S', \sigma}(B - \sum \limits_{i=0}^{k-1} (A_i  S_i )) = \textsf{GLWE}_{S', \sigma}(\Delta M + E)$
+ \item $\textsf{GLWE}_{S', \sigma}(B) - \textsf{GLWE}_{S', \sigma} \left( \sum \limits_{i=0}^{k-1} (A_i  S_i + E_i )\right) $
+ 
+ $= \textsf{GLWE}_{S', \sigma}(B - \sum \limits_{i=0}^{k-1} (A_i  S_i + E_i)) $
+ 
+ $= \textsf{GLWE}_{S', \sigma}(\Delta M + E')$ \textcolor{red}{ $\rhd$ where $E' = E - \sum\limits_{i=0}^{k-1}E_i$}
 
 $ $
 
-\item To expand the above relation, 
+\item If we explicitly expand the above relation, 
 
-$\textsf{GLWE}_{S', \sigma}(B) - \textsf{GLWE}_{S', \sigma} \left(\sum \limits_{i=0}^{k-1} (A_i  S_i)\right)$
+$\textsf{GLWE}_{S', \sigma}(B) - \textsf{GLWE}_{S', \sigma} \left(\sum \limits_{i=0}^{k-1} (A_i  S_i + E_i)\right)$
 
-$ = (\overbrace{0, 0, \ldots}^{k'}, B) - (\overbrace{A'_0, A'_1, \ldots, A'_{k'-1}}^{k'}, B')  $ \text { } \textcolor{red}{ $\rhd$ where $B' = \sum\limits_{i=0}^{k'-1} A'_iS'_i + \sum\limits_{i=0}^{k-1} A_iS_i + E'$}
+$ = (\overbrace{0, 0, \ldots}^{k'}, B) - (\overbrace{A'_0, A'_1, \ldots, A'_{k'-1}}^{k'}, B')  $ \text { } \textcolor{red}{ $\rhd$ where $B' = \sum\limits_{i=0}^{k'-1} A'_iS'_i + \sum\limits_{i=0}^{k-1} A_iS_i + \sum\limits_{i=0}^{k-1}E_i$}
 
 $(\overbrace{-A'_0, -A'_1, \ldots, -A'_{k'-1}}^{k'}, \text{ } B - B')$
 
@@ -108,18 +116,20 @@ $ \textsf{GLWE}_{S', \sigma}^{-1} \bm{\Big(} \text{ } (\overbrace{-A'_0, -A'_1, 
 
 $ = B -  B' - \sum\limits_{i=0}^{k'-1} -A'_iS_i'$
 
-$= B - \sum\limits_{i=0}^{k'-1} A'_iS'_i - \sum\limits_{i=0}^{k-1} A_iS_i - E' + \sum\limits_{i=0}^{k'-1} A'_iS_i'$
+$= B - \sum\limits_{i=0}^{k'-1} A'_iS'_i - \sum\limits_{i=0}^{k-1} A_iS_i - \sum\limits_{i=0}^{k-1}E_i + \sum\limits_{i=0}^{k'-1} A'_iS_i'$
 
-$= B - \sum\limits_{i=0}^{k-1} A_iS_i - E'$
+$= B - \sum\limits_{i=0}^{k-1} A_iS_i - \sum\limits_{i=0}^{k-1}E_i$
 
-$= \Delta M + E - E' \approx \Delta M + E$
+$= \Delta M + E - \sum\limits_{i=0}^{k-1}E_i $
 
-Strictly speaking, $B - \sum\limits_{i=0}^{k-1} A_iS_i = \Delta M + E + Kq$ where $K$ is a polynomial to represent the wrap-around coefficient values as multiples of $q$. However, since all the above computations are done in modulo $q$, the $Kq$ term gets eliminated. 
+$= \Delta M + E' \approx \Delta M + E$ \textcolor{red}{ $\rhd$ where $E' = E - \sum\limits_{i=0}^{k-1}E_i$}
+
+Strictly speaking, $B - \sum\limits_{i=0}^{k-1} A_iS_i = \Delta M + E + Kq$ where $K$ is a polynomial representing the wrap-around coefficient values as multiples of $q$. However, since all the above computations are done in modulo $q$, the $Kq$ term gets eliminated. 
 
 $ $
 
-\item Thus, $ (0, 0, \ldots , B) - \sum \limits_{i=0}^{k-1} \langle \textsf{Decomp}^{\beta, l}(A_i), \mathit{KSK}_i \rangle \approx \textsf{GLWE}_{S',\sigma}(\Delta M) $ 
+\item Thus, $ (0, 0, \ldots , B) - \sum \limits_{i=0}^{k-1} \langle \textsf{Decomp}^{\beta, l}(A_i), \mathit{KSK}_i \rangle = \textsf{GLWE}_{S',\sigma}(\Delta M + E') \approx \textsf{GLWE}_{S',\sigma}(\Delta M + E) $ 
 
-$\textsf{GLWE}_{S',\sigma}(\Delta M)$ is an encryption of plaintext $\Delta M$ with the plaintext scaling factor 1. However, we can theoretically see this as an encryption of plaintext $M$ with the plaintext scaling factor $\Delta$. This way, we can recover the ciphertext's original scaling factor $\Delta$ without any additional computation. 
+$\textsf{GLWE}_{S',\sigma}(\Delta M + E')$ is an encryption of plaintext $\Delta M$ with the plaintext scaling factor 1. However, we can re-interpret this ciphertext as an encryption of plaintext $M$ with the plaintext scaling factor $\Delta$. This way, we can recover the ciphertext's original scaling factor $\Delta$ without any additional computation. 
 \end{enumerate}
 \end{myproof}
