--- a/d02-bfv.tex
+++ b/d02-bfv.tex
@@ -184,7 +184,7 @@ $\vec{m} = (W^T)^{-1} \cdot \vec{v}$
 
 $ $
 
-Therefore, we need to find out what $(W^T)^{-1}$ is, the inverse of $W^T$ as the encoding matrix. But we already learned from Theorem~\ref*{subsec:vandermonde-euler} (in \autoref{subsec:vandermonde-euler}) that $V^{-1} = \dfrac{V^T \cdot I_n^R}{n}$, where $V = W^T$ and $V = W$. In other words, $(W^T)^{-1} = \dfrac{W \cdot I_n^R}{n}$. Therefore, we can express the BFV encoding formula as: 
+Therefore, we need to find out what $(W^T)^{-1}$ is, the inverse of $W^T$ as the encoding matrix. But we already learned from Theorem~\ref*{subsec:vandermonde-euler} (in \autoref{subsec:vandermonde-euler}) that $V^{-1} = \dfrac{V^T \cdot I_n^R}{n}$, where $V = W^T$ and $V^T = W$. In other words, $(W^T)^{-1} = \dfrac{W \cdot I_n^R}{n}$. Therefore, we can express the BFV encoding formula as: 
 
 $\vec{m} = (W^T)^{-1} \cdot \vec{v} = \dfrac{W \cdot I_n^R \cdot \vec{v}}{n}$, \text{ } where
 
@@ -216,7 +216,6 @@ Note that by computing $\dfrac{W \cdot I_n^R \cdot \vec{v}}{n}$
 Once we have the $n$-dimensional vector $\vec{m}$, we scale (i.e., multiply) it by some scaling factor $\Delta = \left\lfloor \dfrac{q}{t} \right\rfloor$, where $q$ is the ciphertext modulus. We scale $\vec{m}$ by $\Delta$ and make it $\Delta \vec{m}$. 
 The $n$ integers in $\Delta\vec{m}$ will be used as $n$ coefficients of the plaintext polynomial for RLWE encryption. The finally encoded plaintext polynomial $\Delta M = \sum\limits_{i=0}^{n-1}\Delta m_iX^i$. 
 
-%\textbf{Choice of $\bm\Delta$:} As discussed in \autoref{subsubsec:glwe-add-cipher-discuss}, the FHE cryptosystem assumes that the scaled plaintext coefficient $\Delta m_i$ never overflows (or underflows) the ciphertext modulo $q$ (i.e., $0 \leq \Delta m_i < q$ or $\dfrac{q}{2} \leq \Delta m_i < \dfrac{q}{2}$) for the correctness of the final divide-and-round operation upon decryption. Therefore, in BFV, the scaling factor $\Delta$ can be any value such that $1 \leq \Delta \leq \dfrac{q}{t}$. However, if $\Delta$ is smaller than $\dfrac{q}{t}$ but too close to $\dfrac{q}{t}$, then the plaintext coefficient may overflow the boundary of $\dfrac{q}{t}$ during homomorphic addition or multiplication and the correctness of computation will break. Conversely, if $\Delta$ is too small and close to 1, then the growing noise will easily trespass and corrupt the plaintext digits, breaking the correctness of further computations. 
 
 \subsubsection{\textsf{Decoding\textsubscript{1}}}  
 \label{subsubsec:bfv-enc-dec-decoding1} 
@@ -313,7 +312,7 @@ $ $
 
 \item Compute $B = -A \cdot S + \Delta M + E \text{ } \in \mathcal{R}_{\langle n,q \rangle}$
 
-\item $\textsf{RLWE}_{S,\sigma}(\Delta M) = (A, B) \text{ } \in \mathcal{R}_{\langle n,q \rangle}^2$ 
+\item $\textsf{RLWE}_{S,\sigma}(\Delta M + E) = (A, B) \text{ } \in \mathcal{R}_{\langle n,q \rangle}^2$ 
 
 \end{enumerate}
 
@@ -336,6 +335,9 @@ As explained in Summary~\ref*{subsubsec:lwe-noise-bound} (in \autoref{subsubsec:
 \end{tcolorbox}
 
 
+In this section, we will often write $\textsf{RLWE}_{S,\sigma}(\Delta  M + E)$ as $\textsf{RLWE}_{S,\sigma}(\Delta  M)$ for simplicity, because $\textsf{RLWE}_{S,\sigma}(\Delta M + E) \approx \textsf{RLWE}_{S,\sigma}(\Delta M)$ (i.e., they decrypt to the same message). Even in the case that we write $\textsf{RLWE}_{S,\sigma}(\Delta  M)$ instead of $\textsf{RLWE}_{S,\sigma}(\Delta  M + E)$, you should assume this as an encryption of $\Delta  M + E$ (i.e., the noise is included inside the scaled message). 
+
+
 We will explain the conditions for BFV's correct decryption in more detail in \autoref{subsubsec:bfv-noise-analysis}.
 
 
@@ -347,13 +349,13 @@ BFV's ciphertext-to-ciphertext addition uses RLWE's ciphertext-to-ciphertext add
 
 
 \begin{tcolorbox}[title={\textbf{\tboxlabel{\ref*{subsec:bfv-add-cipher}} BFV Ciphertext-to-Ciphertext Addition}}]
-$\textsf{RLWE}_{S, \sigma}(\Delta M^{\langle 1 \rangle} ) + \textsf{RLWE}_{S, \sigma}(\Delta M^{\langle 2 \rangle} ) $
+$\textsf{RLWE}_{S, \sigma}(\Delta M^{\langle 1 \rangle} + E^{\langle 1 \rangle} ) + \textsf{RLWE}_{S, \sigma}(\Delta M^{\langle 2 \rangle} + E^{\langle 2 \rangle}) $
 
 $ = ( A^{\langle 1 \rangle}, \text{ } B^{\langle 1 \rangle}) + (A^{\langle 2 \rangle}, \text{ } B^{\langle 2 \rangle}) $
 
 $ = ( A^{\langle 1 \rangle} + A^{\langle 2 \rangle}, \text{ } B^{\langle 1 \rangle} + B^{\langle 2 \rangle} ) $
 
-$= \textsf{RLWE}_{S, \sigma}(\Delta(M^{\langle 1 \rangle} + M^{\langle 2 \rangle}) )$
+$= \textsf{RLWE}_{S, \sigma}(\Delta(M^{\langle 1 \rangle} + M^{\langle 2 \rangle}) + E^{\langle 1 \rangle} + E^{\langle 2 \rangle})$
 \end{tcolorbox}
 
 
@@ -471,13 +473,13 @@ BFV's ciphertext-to-plaintext addition uses RLWE's ciphertext-to-plaintext addit
 
 
 \begin{tcolorbox}[title={\textbf{\tboxlabel{\ref*{subsec:bfv-add-plain}} BFV Ciphertext-to-Plaintext Addition}}]
-$\textsf{RLWE}_{S, \sigma}(\Delta M) + \Delta\Lambda $
+$\textsf{RLWE}_{S, \sigma}(\Delta M + E) + \Delta\Lambda $
 
 $=  (A, \text{ } B) + \Delta\Lambda$
 
 $=  (A, \text{ } B + \Delta\cdot\Lambda)$
 
-$= \textsf{RLWE}_{S, \sigma}(\Delta (M + \Lambda) )$
+$= \textsf{RLWE}_{S, \sigma}(\Delta (M + \Lambda) + E)$
 \end{tcolorbox}
 
 
@@ -490,13 +492,13 @@ BFV's ciphertext-to-plaintext multiplication uses RLWE's ciphertext-to-plaintext
 
 
 \begin{tcolorbox}[title={\textbf{\tboxlabel{\ref*{subsec:bfv-mult-plain}} BFV Ciphertext-to-Plaintext Multiplication}}]
-$\textsf{RLWE}_{S, \sigma}(\Delta M) \cdot \Lambda$
+$\textsf{RLWE}_{S, \sigma}(\Delta M + E) \cdot \Lambda$
 
 $= (A, \text{ } B) \cdot \Lambda$
 
 $= (A \cdot \Lambda, \text{ }  B \cdot \Lambda )$
 
-$= \textsf{RLWE}_{S, \sigma}(\Delta (M \cdot \Lambda) )$
+$= \textsf{RLWE}_{S, \sigma}(\Delta (M \cdot \Lambda) + \Lambda E)$
 \end{tcolorbox}
 
 
@@ -1284,62 +1286,6 @@ $ $
 
 The above derivations demonstrate that $\vec{v}_1^{\langle h \rangle} = \hathat{H}_1^{*}\cdot \vec{m}^{\langle h \rangle}$, and $\vec{v}_2^{\langle h \rangle} = \hathat{H}_2^{*}\cdot \vec{m}^{\langle h \rangle}$. Combining these two findings, we reach the conclusion that $\vec{v}^{\langle h \rangle} = \hathat{W}^* \cdot \vec{m}^{\langle h \rangle}$: rotating the first-half elements of the input vector $\vec{v}$ by $h$ positions to the left and the second-half elements of it by $h$ positions also to the left is equivalent to updating the plaintext polynomial $M(X)$ to $M(X^{J(h)})$ and then decoding it with the decoding matrix $\hathat{W}^*$. 
 
-\begin{comment}
-We will also more concretely demonstrate this below. In particular, we will show that $M(X^{J(h)})$ decodes into a vector that is a rotated version of $\vec{v}$ by $h$ positions to the left. Given the plaintext polynomial $M(X)$, its input vector is as follows:
-
-$\vec{v} = \bm{(}\text{ } M(\omega^{J(0)}), \text{ } M(\omega^{J(1)}), \text{ } M(\omega^{J(2)}), \cdots, \text{ } M(\omega^{J(\frac{n}{2}-1)}) \text{ }\bm{)}$
-
-$ $
-
-If we rotate $\vec{v}$ by $h$ positions to the left, the rotated vector $\vec{v}^{\langle h \rangle}$ will be as follows:
-
-$\vec{v}^{\langle h \rangle} = \bm{(}\text{ } M(\omega^{J(h)}), \text{ } M(\omega^{J(h+1)}), \cdots, \text{ } M(\omega^{J(\frac{n}{2}-2)}), \text{ } M(\omega^{J(\frac{n}{2}-1)}), \text{ } M(\omega^{J(0)}), \text{ } M(\omega^{J(1)}), \cdots, \text{ } M(\omega^{J(h-1)})  \text{ }\bm{)}$
-
-$ $
-
-Meanwhile, notice that decoding $\vec{m}^{\langle h \rangle}$ (which contains the $n$ coefficients of $M(X^{J(h)})$) with the new decoding matrix $\hathat{W}^*$ should give us the following:
-
-$ \hathat{W}^* \cdot \vec{m}^{\langle h \rangle}$
-
-$ =  \bm{(}\text{ } M( (\omega^{J(0)})^{J(h)} ), \text{ } M( (\omega^{J(1)})^{J(h)} ), \text{ } M( (\omega^{J(2)})^{J(h)} ), \cdots, \text{ } M( (\omega^{J(\frac{n}{2}-1)})^{J(h)} ), \text{ } M( (\overline{\omega}^{J(\frac{n}{2}-1)})^{J(h)}), $
-
-$  \text{ } \text{ }  \text{ } \text{ }  \text{ } \text{ }  \text{ } \text{ } \text{ } \text{ } \text{ } \cdots, M( (\overline\omega^{J(1)})^{J(h)} ), \text{ } M( (\overline\omega^{J(0)})^{J(h)} ) \text{ } \bm{)} $  \textcolor{red}{ $\rhd$ evaluating $M(X^{J(h)})$ at $n$ distinct $(\mu=2n)$-th primitive roots of unity: $\omega^{J(0)}, \omega^{J(1)}, \cdots,  \omega^{J(\frac{n}{2}-1)}, \overline\omega^{J(\frac{n}{2}-1)}, \cdots, \overline\omega^{J(1)}, \overline\omega^{J(0)} $}
-
-$ $
-
-$ = \bm{(}\text{ } M( (\omega^{5^0})^{5^h} ), \text{ } M( (\omega^{5^1})^{5^h} ), \text{ } M( (\omega^{5^2})^{5^h} ), \cdots, \text{ } M( (\omega^{5^{\frac{n}{2}-1}})^{5^h} ), \text{ } M( (\overline{\omega}^{5^{\frac{n}{2}-1}})^{5^h} ), $
-
-$  \text{ } \text{ }  \text{ } \text{ }  \text{ } \text{ }  \text{ } \text{ } \text{ } \text{ } \text{ } \cdots, M( (\overline\omega^{5^1})^{5^h} ), \text{ } M( (\overline\omega^{5^0})^{5^h} ) \text{ }\bm{)} $
-
-$ $
-
-$ =  \bm{(}\text{ } M( \omega^{5^h} ), \text{ } M( \omega^{5^{1+h}}), \text{ } M( \omega^{5^{2+h}}), \cdots, \text{ } M( \omega^{5^{\frac{n}{2}-1+h}}), \text{ } M(\overline{\omega}^{5^{\frac{n}{2}-1+h}} ),  \cdots, M( \overline\omega^{5^{1+h}} ), \text{ } M( \overline\omega^{5^{h}} ) \text{ }\bm{)} $
-
-$ $
-
-$ =  \bm{(}\text{ } M( \omega^{5^h} ), \text{ } M( \omega^{5^{1+h}}), \text{ } M( \omega^{5^{2+h}}), \cdots, \text{ } M( \omega^{5^{h-1}}), \text{ } M(\overline{\omega}^{5^{h-1}} ),  \cdots, M( \overline\omega^{5^{1+h}} ), \text{ } M( \overline\omega^{5^{h}} ) \text{ }\bm{)} $ 
-
-\textcolor{red}{ $\rhd$ since $5^{\frac{n}{2}} \bmod 2n = 1$}
-
-$ $
-
-Since the above vector is a Hermitian vector, we will remove its second half (i.e., conjugates of the first half) to retrieve the original input vector, which gives us the following:
-
-
-$ \bm{(}\text{ } M( \omega^{5^h} ), \text{ } M( \omega^{5^{1+h}}), \text{ } M( \omega^{5^{2+h}}), \cdots, \text{ } M( \omega^{5^{\frac{n}{2}-2}}) \text{ } M( \omega^{5^{\frac{n}{2}-1}}), \text{ } M( \omega^{5^{0}}), \text{ } M( \omega^{5^{1}}), \cdots, M( \omega^{5^{h-1}}) \text{ }\bm{)} $
-
-$ $
-
-$ = \bm{(}\text{ } M(\omega^{J(h)}), \text{ } M(\omega^{J(h+1)}), \cdots, \text{ } M(\omega^{J(\frac{n}{2}-2)}), \text{ } M(\omega^{J(\frac{n}{2}-1)}), \text{ } M(\omega^{J(0)}), \text{ } M(\omega^{J(1)}), \cdots, \text{ } M(\omega^{J(h-1)})  \text{ }\bm{)}$
-
-$ $
-
-$= \vec{v}^{\langle h \rangle}$
-
-$ $
-
-In conclusion, given the modified encoding matrix $\hathat{W}$ and modified decoding matrix $\hathat{W}^*$, rotating all elements of the input vector $\vec{v}$ by $h$ positions to the left is equivalent to updating the plaintext polynomial $M(X)$ to $M(X^{J(h)})$. 
-\end{comment}
 
 
 However, now a new problem is that we cannot directly update the plaintext $M(X)$ to $M(X^{J(h)})$, because $M(X)$ is encrypted as an RLWE ciphertext. Therefore, we need to instead update the RLWE ciphertext components $(A, B)$ to \textit{indirectly} by updating $M(X)$ to $M(X^{J(X)})$. We will explain this in the next subsection. 
@@ -1939,7 +1885,7 @@ In BFV, continuous ciphertext-to-ciphertext multiplication increases the noise i
 
 In this subsection, we will assume the plaintext modulus $t = p$, a prime number. Although $t$ can be generalized as $t = p^r$ where $r \in \mathbb{Z}$ and $r \geq 1$ (Summary~\ref*{subsec:bfv-enc-dec} in \autoref{subsec:bfv-enc-dec}), we will explain BFV's bootstrapping assuming $t=p$ for simplicity, and then generalize $t$ as $t = p^r$ in the end. 
 
-The core idea of the BFV bootstrapping is to homomorphically evaluate a special polynomial $G_\varepsilon(x)$, a digit extraction polynomial modulo $p^\varepsilon$ (for some positive integer $\varepsilon$), where the input to $G_\varepsilon(x)$ is a noisy plaintext value modulo $p^\varepsilon$ and the output is a noise-free plaintext value modulo $p^\varepsilon$, shifted to the right by 1 base-$p$ digit. Here, where the noise located at the least significant digits in a base-$p$ (prime) representation is zeroed out and shifted right. For example, $G_\varepsilon(3p^3 + 4p^2 + 6p + 2) = 3p^2 + 4p^1 + 6 \bmod p^\varepsilon$. Given that the noise resides in the least significant $\varepsilon-1$ digits in base-$p$ representation, we can homomorphically and recursively evaluate $G_\varepsilon(x)$ total $\varepsilon-1$ times in a row, which zeroes out and removes the least significant (base-$p$) $\varepsilon-1$ digits of input $x$. To homomorphically evaluate the noisy plaintext through $G_\varepsilon(x) \bmod p^\varepsilon$, we need to first switch the plaintext modulus from $t$ to $p^\varepsilon$, where $q \gg p^\varepsilon > p = t$. The larger $\varepsilon$ is, the more likely it is that the noise gets successfully zeroed out; however, the computation overhead becomes larger. If $\varepsilon$ is small, the computation gets faster, but the digit-wise distance between the noise and the plaintext decreases, potentially corrupting the plaintext during bootstrapping, because removing the most significant noise digit may also remove the least significant plaintext digit. Therefore, $\varepsilon$ should be chosen carefully. 
+The core idea of the BFV bootstrapping is to homomorphically evaluate a special polynomial $G_\varepsilon(x)$, a digit extraction polynomial modulo $p^\varepsilon$ (for some positive integer $\varepsilon$), where the input to $G_\varepsilon(x)$ is a noisy plaintext value modulo $p^\varepsilon$ and the output is a noise-free plaintext value modulo $p^\varepsilon$, shifted to the right by 1 base-$p$ digit. Here, where the noise located at the least significant digits in a base-$p$ (prime) representation is zeroed out and shifted right. For example, $G_\varepsilon(3p^3 + 4p^2 + 6p + 2) = 3p^2 + 4p^1 + 6 \bmod p^\varepsilon$. Given that the noise resides in the least significant $\varepsilon-1$ digits in base-$p$ representation, we can homomorphically and recursively evaluate $G_\varepsilon(x)$ total $\varepsilon-1$ times in a row, which zeroes out and removes the least significant (base-$p$) $\varepsilon-1$ digits of input $x$. To homomorphically evaluate the noisy plaintext through $G_\varepsilon(x) \bmod p^\varepsilon$, we need to first switch the plaintext modulus from $t$ to $p^\varepsilon$, where $q \gg p^{\varepsilon} > p = t$. The larger $\varepsilon$ is, the more likely it is that the noise gets successfully zeroed out; however, the computation overhead becomes larger. If $\varepsilon$ is small, the computation gets faster, but the digit-wise distance between the noise and the plaintext decreases, potentially corrupting the plaintext during bootstrapping, because removing the most significant noise digit may also remove the least significant plaintext digit. Therefore, $\varepsilon$ should be chosen carefully. 
 
 $ $
 
@@ -2010,27 +1956,8 @@ $ $
 
 \item \textbf{\textsf{SlotToCoeff}:} Homomorphically move each input vector slot's value back to the (encrypted) polynomial coefficient position. This is done by homomorphically multiplying the decoding matrix $\hathat{W}^*$ to the ciphertext (Summary~\ref*{subsubsec:bfv-rotation-summary} in \autoref{subsubsec:bfv-rotation-summary}). The final output of this step is $ = \textsf{RLWE}_{S, \sigma}\left(\left\lfloor\dfrac{q}{p}\right\rfloor M  + E^{\langle b \rangle}\right)$, where $E^{\langle \text{b} \rangle}$ is a new small noise term generated during the homomorphic operation of \textsf{CoeffToSlot}, digit extraction, and \textsf{SlotToCoeff}. The size of $E^{\langle \text{b} \rangle}$ is fixed and smaller than $E$ and $E'$. 
 
-
-$ $
-
-
-%\item \textbf{Scaling Factor Re-interpretation:} At this point, we have the ciphertext $\textsf{RLWE}_{S, \sigma}\bm(\Delta' \cdot (p^{\varepsilon-1}M + K'p^\varepsilon)\bm) \bmod q$, where the plaintext modulus is $p^\varepsilon$ and the plaintext scaling factor $\Delta' = \dfrac{q}{p^\varepsilon}$. Without doing any actual additional computation, we can view this ciphertext as $\textsf{RLWE}_{S, \sigma}\bm(\dfrac{q}{p}M)\bm) = \bmod q$, which is an encryption of plaintext modulus $p$ whose scaling factor $\Delta' = \dfrac{q}{p}$. This is because:
-
-%$\textsf{RLWE}_{S, \sigma}\bm(\Delta' \cdot (p^{\varepsilon-1}M + K'p^\varepsilon) \bm) = \textsf{RLWE}_{S, \sigma}\bm{\Big(}\dfrac{q}{p^\varepsilon} \cdot (p^{\varepsilon-1}M + K'p^\varepsilon) \bm{\Big)}$
-
-%$ = \textsf{RLWE}_{S, \sigma}\left(\dfrac{q}{p}M + K'q \right)$
-
-%$ = \textsf{RLWE}_{S, \sigma}\left(\dfrac{q}{p}M \right)$
-
-
-%In other words, we can view the ciphertext $ \textsf{RLWE}_{S, \sigma}\bm(\Delta' \cdot (p^{\varepsilon-1} M + K'p^\varepsilon )\bm) \bmod q$ whose plaintext modulus is $p^\varepsilon$ and scaling factor $\Delta' = \dfrac{q}{p^\varepsilon}$ as another ciphertext $ \textsf{RLWE}_{S, \sigma}\bm(\Delta M \bm) \bmod q$ whose plaintext modulus is $p$ and scaling factor $\Delta = \dfrac{q}{p}$. 
-
-
-
-
 \end{enumerate}
 
-%Notice that the final ciphertext $ \textsf{RLWE}_{S, \sigma}\bm(\Delta' \cdot M \bm)$'s scaling factor stays the same as before the bootstrapping, while the original noises $E$ and $E'$ have been eliminated. On the other hand, 
 
 Next, we will explain each step in more detail. 
 
@@ -2080,18 +2007,7 @@ $ $
 During this homomorphic decryption, we did not reduce the plaintext result by modulo $p^\varepsilon$, because the homomorphic decryption is a ciphertext-to-plaintext multiplication and addition done in the ciphertext modulus $q$ (not $p^{\varepsilon}$) by using $A'$ and $B'$ as plaintexts (with the plaintext modulus $p^e$) and $\textsf{RLWE}_{S, \sigma}(\Delta' S)$ as a ciphertext (with the ciphertext modulus $q$). This is why the wrapping term $Kp^\varepsilon$ is preserved in the plaintext after the homomorphic decryption-- we will handle this term at the later stage of bootstrapping. Also, notice that the computation of $A'\cdot \textsf{RLWE}_{S, \sigma}(\Delta' S)$ would not generate much noise. This is because $A'$ is a plaintext modulo $p^\varepsilon$, and thus the new noise generated by ciphertext-to-plaintext multiplication is $A' \cdot E_s$ (where $E_s$ is the encryption noise of $\textsf{RLWE}_{S, \sigma}(\Delta' S)$). Since the ciphertext modulus $q \gg p^\varepsilon$, $q \gg A' \cdot E_s$. 
 
 Once we have derived $\textsf{RLWE}_{S, \sigma}\bm(\Delta' Z\bm)$, our next step is to remove the noise in the lower $\varepsilon-1$ digits (in terms of base-$p$ representation) of each $z_i$ for $0 \leq i \leq n - 1$. This is equivalent to transforming noisy $\textsf{RLWE}_{S, \sigma}(\Delta' Z) = \textsf{RLWE}_{S, \sigma}\bm(\Delta' \cdot (p^{\varepsilon-1} M  + E' + Kp^\varepsilon)\bm)$ into noise-free $\textsf{RLWE}_{S, \sigma}\bm (\Delta M)\bm )$ where $\Delta = \dfrac{q}{p}$. BFV's solution to do this is to design a $p$-degree polynomial function which computes the same logical result as $\left\lceil \dfrac{z_i}{p^{\varepsilon-1}} \right\rfloor \bmod p$. We will later explain how to design this polynomial by using the digit extraction polynomial $G_\varepsilon(x)$ (\autoref{subsubsec:bfv-bootstrapping-digit-extraction}). 
-%Then, we can transform $\textsf{RLWE}_{S, \sigma}\bm(Z(X)\bm)$ into $ \textsf{RLWE}_{S, \sigma}\bm(\sum\limits_{i=0}^{n-1} (\sum\limits_j^{\varepsilon-1} z_{i, j}p^{j-1})\cdot X^i\bm)$, which is a noise-free plaintext $M$ (roughly) scaled by $\left\lceil\dfrac{p^\varepsilon w_L}{q}\right\rfloor \cdot p^{\varepsilon-v-1}$. Next, we switch the modulus of this ciphertext from $p^\varepsilon$ to $q_L$, which will output 
-%$\textsf{RLWE}_{S, \sigma}\left(\left\lceil\left\lceil\dfrac{p^\varepsilon w_L}{q}\right\rfloor \cdot \dfrac{q_L}{p^\varepsilon} M\right\rfloor\right) \bmod q_L$. Finally, we homomorphically multiply $\dfrac{q p^\varepsilon}{p^\varepsilon}$ to this ciphertext, which will output the following:
 
-%$\dfrac{q p^\varepsilon}{p^\varepsilon w_L q_L} \cdot \textsf{RLWE}_{S, \sigma}\left(\left\lceil\left\lceil\dfrac{p^\varepsilon w_L}{q}\right\rfloor \cdot \dfrac{q_L}{p^\varepsilon} M\right\rfloor \right) \approx \textsf{RLWE}_{S, \sigma}(w_L M) \bmod q_L = \textsf{RLWE}_{S, \sigma}(\Delta M) \bmod q_L$. 
-
-%In fact, the homomorphic operations of digit extraction, second rescaling (from $p^\varepsilon \rightarrow q_L$), and ciphertext-plaintext multiplication will generate additional noises, but this is a minor issue, because the homomorphic digit extraction procedure has removed the hugely scaled-up major noise generated during the first rescaling from $q \rightarrow p^\varepsilon$. 
-
-%Now, our task is to design a function $G_\varepsilon(x)$ that comprises only $(+, \cdot)$ operations and removes the noise in the least significant digits of the scaled-up noisy plaintext, which outputs: 
-
-%$G_\varepsilon(z_i) = \left\lceil \dfrac{z_i}{p^v} \right\rfloor \bmod p^\varepsilon$
-
-%Since this polynomial zeros the least significant digits, we call it a \textit{lifting} polynomial. 
 
 However, in order to \textit{homomorphically} evaluate this polynomial at each coefficient $z_i$ given the ciphertext $\textsf{RLWE}_{S, \sigma}(\Delta' Z)$, we need to move polynomial $Z$'s each coefficient $z_i$ to the input vector slots of an RLWE ciphertext. This is because BFV supports homomorphic batched $(+, \cdot)$ operations based on input vector slots of ciphertexts as operands. Therefore, we need to evaluate the noise-removing polynomial $G_\varepsilon(x)$ based on the values stored in the input vector slots of a ciphertext. 
 
@@ -2248,7 +2164,7 @@ $ $
 
 Note that the scaling factor re-interpretation does not involve any actual computation, but only changes our way of interpreting the scaling factor. Notice that at the end of the final round, the plaintext scaling factor becomes $\left\lfloor\dfrac{q}{p}\right\rfloor$, which is the desired plaintext scaling factor for standard BFV ciphertexts. Therefore, the scaling factor re-interpretation has three benefits: (1) we skip explicit multiplication by $|p^{-1}|_q$ at each round; (2) we prevent noise explosion; (3) at the end of all rounds, the plaintext scaling factor becomes the desired value for standard BFV ciphertexts, gracefully completing the bootstrapping procedure. 
 
-Meanwhile, there are two important points to be aware of. First, each $i$-th round of scaling factor re-interpretation creates a small drift error in the scaling factor due to the difference $\epsilon_i = p^{-1}\cdot \left\lfloor\dfrac{q}{p^{\varepsilon - i}}\right\rfloor - \left\lfloor\dfrac{q}{p^{\varepsilon - i + 1}}\right\rfloor$, where $0 \leq \epsilon_i < p$. Therefore, an additional drift error $E_i^{\langle \text{re} \rangle}$ is created at each $i$-th round, which is small enough to be bounded by: 
+Meanwhile, there are two important points to be aware of. First, each $i$-th round of scaling factor re-interpretation creates a small drift error in the scaling factor due to the difference $\epsilon_i = p^{-1}\cdot \left\lfloor\dfrac{q}{p^{\varepsilon - i}}\right\rfloor - \left\lfloor\dfrac{q}{p^{\varepsilon - i + 1}}\right\rfloor$, where $0 \leq \epsilon_{i} < p$. Therefore, an additional drift error $E_i^{\langle \text{re} \rangle}$ is created at each $i$-th round, which is small enough to be bounded by: 
 
 $E_i^{\langle \text{re} \rangle} \leq \epsilon_i\cdot (p^{\varepsilon - i-1}M + \left\lfloor\dfrac{E'}{p^{i}}\right\rfloor + K^{\langle i \rangle} p^{\varepsilon - i}) < p^{\varepsilon-1}M + \left\lfloor\dfrac{E'}{p}\right\rfloor + K^{\langle i \rangle}p^{\varepsilon + 1} \ll \left\lfloor\dfrac{q}{p^{\varepsilon}}\right\rfloor$
 
@@ -2390,52 +2306,6 @@ The above relation implies that $F_{\varepsilon'}(x) \bmod p^{\varepsilon'+1}$ i
 
 We use $F_{\varepsilon'}(x)$ as the internal helper function within the digit extraction function $G_{\varepsilon}(z_i)$ that calls $F_{\varepsilon'}(x)$ a total of $v-1$ times.
 
-\begin{comment}
-$ $
-
-
-
-\subsubsection{Scaling Factor Re-interpretation} 
-\label{subsubsec:bfv-bootstrapping-scaling-factor-reinterpretation}
-
-Remember that homomorphically decrypting $(A', B')$ outputs an encryption of $p^{\varepsilon-1}M + E' + Kp^\varepsilon$, whose entire value is greater than $p^\varepsilon$. The final result of homomorphic digit extraction is equivalent to zeroing out the least significant (base-$p$) $\varepsilon-1$ digits of the input value $p^{\varepsilon-1}M + E' + Kp^\varepsilon$. Therefore, at the end of digit extraction, we obtain a ciphertext that encrypts $p^{\varepsilon-1}M + K'p^\varepsilon$, where $K'p^\varepsilon$ is a polynomial with coefficients that are multiples of $p$ to account for the wrapping values of $p^\varepsilon$. 
-
-Therefore, the output of the digit extraction and \textsf{SlotToCoeff} steps is the ciphertext $\textsf{RLWE}_{S, \sigma}\bm(\Delta' \cdot (p^{\varepsilon-1}M + K'p^\varepsilon)\bm) \bmod q$, where the plaintext modulus is $p^\varepsilon$ and the plaintext scaling factor $\Delta' = \dfrac{q}{p^\varepsilon}$ (
-as we derived in \autoref{subsubsec:bfv-bootstrapping-homomorphic-decryption}). However, our desired outcome of the BFV bootstrapping is a noise-removed ciphertext whose plaintext modulus is $p$ and the plaintext scaling factor is $\Delta=\dfrac{q}{p}$. Without doing any actual additional computation, we can view the above ciphertext $\textsf{RLWE}_{S, \sigma}\bm(\Delta' \cdot (p^{\varepsilon-1}M + K'p^\varepsilon)\bm) \bmod q$ as an encryption of plaintext modulo $p$ whose scaling factor is $\Delta = \dfrac{q}{p}$. This is because:
-
-
-$\textsf{RLWE}_{S, \sigma}\bm(\Delta' \cdot (p^{\varepsilon-1}M + K'p^\varepsilon) \bm) = \textsf{RLWE}_{S, \sigma}\left(\dfrac{q}{p^\varepsilon} \cdot (p^{\varepsilon-1}M + K'p^\varepsilon) \right)$
-
-$ = \textsf{RLWE}_{S, \sigma}\left(\dfrac{q}{p}M + K'q \right)$
-
-$ = \textsf{RLWE}_{S, \sigma}\left(\dfrac{q}{p}M \right) \bmod q$
-
-$ $
-
-Therefore, we can view the above ciphertext as $ \textsf{RLWE}_{S, \sigma}\bm(\Delta M\bm) \bmod q$ whose plaintext modulus is $p$ and scaling factor $\Delta = \dfrac{q}{p}$, because the underlying ciphertext's structure of these two viewpoints is identical. This leads to the corollary that evaluating the digit extraction function (\autoref{subsubsec:bfv-bootstrapping-digit-extraction}) at $z_i$ recursively total $\varepsilon-1$ times is logically equivalent to the noise elimination and plaintext modulus switch ($p^\varepsilon \rightarrow p$) as follows:
-
-$G_{\varepsilon,1} \circ \cdots \circ G_{\varepsilon,\varepsilon-2} \circ G_{\varepsilon,\varepsilon-1}(z_i) = \left\lfloor \dfrac{z_i}{p^{\varepsilon-1}} \right\rfloor \bmod p$ 
-
-
-$ $
-
-We can optionally design a more precise rounding-based function by modifying $z_i$ to $z_i + \dfrac{p^{\varepsilon-1}}{2}$ as follows:
-
-
-$G_{\varepsilon,1} \circ \cdots \circ G_{\varepsilon,\varepsilon-2} \circ G_{\varepsilon,\varepsilon-1}\left(z_i + \dfrac{p^{\varepsilon-1}}{2}\right) = \left\lceil \dfrac{z_i}{p^{\varepsilon-1}} \right\rfloor \bmod p$ 
-
-
-
-%$ $
-
-%\para{Handling the modulo-wrapping $\bm{K'p}$ Term:}
-%As explained in Summary~\ref*{subsubsec:scaling-factor-computation}, regardless of what is the value of $Kp$ in the plaintext whose modulus is $p$, the encrypted plaintext value (which is not modulo-reduced by $p$ yet) can be correctly decrypted to the expected value as far as the error bound $\dfrac{k_ip + e_i}{\lfloor\frac{q}{p}\rfloor} < \dfrac{1}{2}$ holds (where in our BFV bootstrapping setup, $k_i$ is modulo-wrapping polynomial $K$'s each coefficient and $e_i$ is noise polynomial $E$'s each coefficient as the noise newly generated during the \textsf{CoeffToSlot}, digit extraction, and \textsf{SlotToCoeff} steps). Remember that $K$ is a polynomial whose coefficients account for the wrap-around values as multiples of $p$ generated from homomorphically computing $A'\cdot \textsf{RLWE}_{S, \sigma}(\Delta' S) + B'$. Since $A'$'s coefficients are in $\mathbb{Z}_{p^\varepsilon}$ and $S$'s coefficients are in $\{-1, 0, 1\}$, each coefficient of $K$ is upper-bounded by $n \cdot p^\varepsilon$ (or more precisely, $n$ can be replaced by the Hamming weight of $S$'s coefficients, which is the number of non-zero coefficients of $S$). Therefore, provided $q \gg p$, we can ensure that each coefficient of $K$ is relatively much smaller than $q$, which satisfies the error bound requirement for correct decryption of $M$.
-
-$ $
-
-\para{Generalization of \boldmath$t = p^r$: } We have explained the BFV bootstrapping with the assumption that the plaintext modulus $t = p$ is a prime number. However, we can generalize $t$ as $t=p^r$ where $r$ can be any positive integer. The benefit of choosing $t = p^r$ with a small $p$ instead of $t = p$ with a big $p$ is the efficient noise management of the digit extraction process. As digit extraction requires many ciphertext-to-plaintext multiplications with $p, p^2, \cdots, p^{\varepsilon-1}$, using a small $p$ generates a smaller noise during the homomorphic operations.  
-
-\end{comment}
 
 \subsubsection{Summary}
 \label{subsubsec:bfv-bootstrapping-summary}
@@ -2507,33 +2377,7 @@ $ $
 \item \textbf{\textsf{\underline{SlotToCoeff}}:} Homomorphically move each input vector slot's value $m_i + k_i^{\langle \varepsilon - r - 1\rangle}p^\varepsilon$ back to the (encrypted) polynomial coefficient positions. This is done by multiplying $\hathat{W}^*$ to the output ciphertext of the digit extraction step, where $\hathat{W}^*$ is the decoding matrix (Summary~\ref*{subsubsec:bfv-rotation-summary} in \autoref{subsubsec:bfv-rotation-summary}). The output of this computation is $\textsf{RLWE}_{S, \sigma}\bm(\Delta\cdot (M + K^{\langle \varepsilon - r - 1\rangle}p) + E^{\langle \text{b} \rangle}) \bm) = \textsf{RLWE}_{S, \sigma}\bm(\Delta\cdot (M + E^{\langle \text{new2} \rangle}) \bm) \bmod q$, where $E^{\langle \text{b} \rangle}$ is the new noise generated during bootstrapping (step $3\sim 5$). 
 
 
-\begin{comment}
-$ $
 
-\item \textbf{\underline{Scaling Factor Re-interpretation}:}
-
-The output of the previous step is $\textsf{RLWE}_{S, \sigma}\bm(\Delta' \cdot (p^{\varepsilon-r}M + K'p^\varepsilon) \bm) \bmod q$, where $\Delta' = \dfrac{q}{p^\varepsilon}$, which is a modulo-$q$ ciphertext encrypting a modulo-$p^\varepsilon$ plaintext with the scaling factor $\dfrac{q}{p^\varepsilon}$. Without any additional computation, we can theoretically view this ciphertext as a modulo-$q$ ciphertext encrypting a modulo-$p$ plaintext with the scaling factor $\dfrac{q}{p}$. This is because: 
-
-$\textsf{RLWE}_{S, \sigma}\bm(\Delta' \cdot (p^{\varepsilon-r}M + K'p^\varepsilon) \bm) = \textsf{RLWE}_{S, \sigma}\left(\dfrac{q}{p^\varepsilon} \cdot (p^{\varepsilon-r}M + K'p^\varepsilon) \right)$
-
-$ = \textsf{RLWE}_{S, \sigma}\left(\dfrac{q}{p}M + K'q \right)$
-
-$ = \textsf{RLWE}_{S, \sigma}\left(\dfrac{q}{p}M \right) \bmod q$
-
-$ $
-
-For these two viewpoints, their underlying ciphertext structure is identical. Therefore, the digit extraction function (\autoref{subsubsec:bfv-bootstrapping-digit-extraction}) at $z_i$ recursively total $\varepsilon-r$ times is logically equivalent to the noise elimination and plaintext modulus switch ($p^\varepsilon \rightarrow p$) as follows:
-
-$G_{\varepsilon,1} \circ \cdots \circ G_{\varepsilon,\varepsilon-r-2} \circ G_{\varepsilon,\varepsilon-r-1}(z_i) = \left\lfloor \dfrac{z_i}{p^{\varepsilon-r}} \right\rfloor \bmod p$ 
-
-$ $
-
-A more precise rounding-based logic can be designed by modifying $z_i$ to $z_i + \dfrac{p^{\varepsilon-r}}{2}$ as follows:
-
-
-$G_{\varepsilon,1} \circ \cdots \circ G_{\varepsilon,\varepsilon-r-2} \circ G_{\varepsilon,\varepsilon-r-1}\left(z_i + \dfrac{p^{\varepsilon-r-1}}{2}\right) = \left\lceil \dfrac{z_i}{p^{\varepsilon-r}} \right\rfloor \bmod p$
-
-\end{comment}
 
 \end{enumerate}
 
@@ -2543,4 +2387,3 @@ $G_{\varepsilon,1} \circ \cdots \circ G_{\varepsilon,\varepsilon-r-2} \circ G_{\
 
 \para{The purpose of Homomorphic Decryption:} Its purpose is to temporarily adjust the scaling factor of the ciphertext to preserve the correctness of bootstrapping. Before homomorphic decryption, the ciphertext encrypts $p^{\varepsilon-r} M$, a message with the scaling factor $p^{\varepsilon-r}$. After homomorphic decryption, the ciphertext encrypts $\Delta' p^{\varepsilon-r} M$, the message $p^{\varepsilon-r} M$ with the scaling factor $\Delta' = \left\lfloor\dfrac{q}{p^{\varepsilon}}\right\rfloor$. This specific adjustment is needed for the scaling factor re-interpretation during each round of digit extraction to conceptually divide by $p$ (i.e., multiply by $|p^{-1}|_q$) and eventually adjust the scaling factor back to $\left\lfloor\dfrac{q}{p^r}\right\rfloor$ as the original form for standard BFV ciphertexts. 
 
-%Suppose that we performed the BFV bootstrapping without homomorphic decryption. Then, the input to the digit extraction step would be $p^{\varepsilon-r}M + Kp^\varepsilon$, not $p^{\varepsilon-r}M + E' + Kp^\varepsilon$. This is because the ciphertext $(A', B')$ encrypts $\textsf{RLWE}_{S,\sigma}(\Delta'' M)$, where $\Delta'' = p^{\varepsilon-r}$. Therefore, applying the \textsf{CoeffToSlot} transformation to $\textsf{RLWE}_{S,\sigma}(\Delta'' M)$ will store the coefficients of $M \bmod p^\varepsilon$, not the coefficients of $\Delta'' M + E' = p^{\varepsilon-r}M + E' \bmod p^\varepsilon$. In order to preserve the noise $E'$ as well, we homomorphically decrypt $\textsf{RLWE}_{S,\sigma}(\Delta'' M)$ by using an encrypted secret key $\textsf{RLWE}_{S, \sigma}(\Delta' S)$ to make it $\textsf{RLWE}_{S,\sigma}\bm(\Delta' \cdot (p^{\varepsilon-r}M + E' + Kp^\varepsilon) \bm)$. 
